--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,5 @@
 {
   "projects": {
-    "default": "testapp-2ded5",
-    "firebase-react-deploy": "testapp-2ded5"
+    "default": "apptest-cd8ca"
   }
 }
